ENG-1201 ps3: adjust jvmopts for debian 12  workers